fix some layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,27 @@
 #root {
+  display: flex;
+  min-height: 100vh;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+}
+
+.info {
+  font-size: 24px;
+  font-style: italic;
+}
+
+.footer {
+  text-align: center;
+  color: #000000;
+  height: 60px;
+  width: 100%;
+  margin: auto;
 }
 
 .logo {
